# little-python-toy-demos

./: README.md  pyproject.toml
demos/: snake_manual.py  vox_soft.py
src/lptd/: __init__.py  demo.py
src/lptd/demos/: __init__.py
src/lptd/demos/snake_auto/: __init__.py  __main__.py  config.py  game.py  pathfinding.py  snake.py
src/lptd/demos/snake_manual/: __init__.py  __main__.py  config.py  game.py  logic.py  render.py  state.py
src/lptd/demos/vox/: __init__.py  __main__.py  camera.py  config.py  gl_draw.py  hud.py  player.py  primitives.py  render_common.py  render_gl.py  render_soft.py  scene_draw.py  sim.py  state.py  world.py
src/lptd/demos/vox/docs/: optimizations.md
src/lptd/demos/vox_gl/: __main__.py
src/lptd/demos/vox_soft_v3/: __main__.py
src/lptd/demos/voxgl/: __init__.py  __main__.py  camera.py  config.py  hud.py  physics.py  player.py  primitives.py  render_common.py  render_gl.py  render_soft.py  scene_draw.py  sim.py  state.py  world.py
src/lptd/demos/voxgl/docs/: optimizations.md
src/lptd/linalg/: __init__.py  mat3.py  mat4.py  vec2.py  vec3.py  vec4.py
